# AgentU

./: AGENTS.md  README copy.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: backend-engineer.md  frontend-engineer.md  google-adk-agent-engineer.md
.cursor/plans/: ediscovery_adk_agents_b9c9f2a9.plan.md
dev_docs/: CLAUDE101.md  CODE_REVIEW.md
ediscovery_agents/: .env  __main__.py  agent.py  callbacks.py  cli.py  config.py
ediscovery_agents/.adk/: session.db
ediscovery_agents/data/: time_data.csv
ediscovery_agents/sub_agents/: __init__.py  analysis_agent.py  ingestion_agent.py  reporting_agent.py
ediscovery_agents/tools/: __init__.py  analysis.py  ingestion.py  loader.py
tests/: conftest.py  test_analysis.py  test_ingestion.py  test_loader.py
